# CarTransporter

./: .gitignore  25xx.c  25xx.h  Airsuspension.odt  Parkbrake.odt  README  README.md  base_rw.c  base_rw.h  drvconf.h  eeprom.c  eeprom.h  eeprom.mk  eeprom_conf.h  eeprom_i2c.c  eeprom_i2c.h  eeprom_spi.c  eeprom_spi.h  eeprom_testsuit.c  eeprom_testsuit.h  eeprom_testsuit_conf.h
drv/: 24xx.c  24xx.h  25xx.c  25xx.h  conf.h  drv_tbl.c
electronics/: Airsuspension_5V.sch  airsupsension_inputs.sch  airsuspension_CAN.sch  airsuspension_MCU.sch  airsuspension_controller-cache.lib  airsuspension_controller-rescue.lib  airsuspension_controller.cmp  airsuspension_controller.csv  airsuspension_controller.kicad_pcb  airsuspension_controller.kicad_pcb-bak  airsuspension_controller.lst  airsuspension_controller.net  airsuspension_controller.pro  airsuspension_controller.sch  airsuspension_controller.xml  airsuspension_controller_hardware.ods  airsuspension_outputs.sch  cinch.bck  fp-lib-table  miscellaneous.bck  miscellaneous.lib  ordering.ods  power_switches.dcm  power_switches.lib  teensy.lib
electronics/AirSuspension/: airsuspension_controller  airsuspension_controller-cache.lib  airsuspension_controller-rescue.lib  airsuspension_controller.cmp  airsuspension_controller.csv  airsuspension_controller.kicad_pcb  airsuspension_controller.kicad_pcb-bak  airsuspension_controller.net  airsuspension_controller.ods  airsuspension_controller.pro  airsuspension_controller.sch  airsuspension_controller.xml  cinch.lib  miscellaneous.bck  miscellaneous.dcm  miscellaneous.lib  power_switches.dcm  power_switches.lib  teensy.dcm  teensy.lib
electronics/AirSuspension/cinch.pretty/: Conn48pin.kicad_mod
electronics/AirSuspension/gerber/: airsuspension_controller-F.Cu.gtl  airsuspension_controller-F.SilkS.gto
electronics/AirSuspension/kicad_lib.pretty/: PG-DSO-12-2.kicad_mod  SMD_Cap_16x16.5.kicad_mod  teensy3.1.kicad_mod
electronics/Parkbrake/: H-BridgeFront.sch  H-BridgeRear.sch  H-Bridge_logic.sch  Parkbrake-cache.lib  Parkbrake-rescue.lib  Parkbrake.csv  Parkbrake.kicad_pcb  Parkbrake.kicad_pcb-bak  Parkbrake.net  Parkbrake.ods  Parkbrake.pro  Parkbrake.sch  Parkbrake.xml  PowerRegulators.sch  buttonlogic.sch  communication_and_debug.sch  falstad_bridge_simulation.sim  fp-lib-table  input_things.sch  microcontroller.sch  ordering.ods  wheelsensors.sch
electronics/Parkbrake/gerber/: Parkbrake-B.Cu.gbr  Parkbrake-B.Mask.gbr  Parkbrake-B.SilkS.gbr  Parkbrake-Edge.Cuts.gbr  Parkbrake-F.Cu.gbr  Parkbrake-F.Mask.gbr  Parkbrake-F.SilkS.gbr  Parkbrake.drl
electronics/Parkbrake/myfootprints.pretty/: CP_0805.kicad_mod  CP_1206.kicad_mod  SOT-363.kicad_mod  inductor_sd54.kicad_mod
electronics/Parkbrake_switch/: Parkbrake_switch  Parkbrake_switch-cache.lib  Parkbrake_switch.kicad_pcb  Parkbrake_switch.kicad_pcb-bak  Parkbrake_switch.net  Parkbrake_switch.pro  Parkbrake_switch.sch  Parkbrake_switch.xml  fp-lib-table
electronics/Parkbrake_switch/SPPH410100.pretty/: SPPH410100.kicad_mod
electronics/Parkbrake_switch/gerber/: Parkbrake_switch-B.Cu.gbr  Parkbrake_switch-B.Mask.gbr  Parkbrake_switch-B.SilkS.gbr  Parkbrake_switch-Edge.Cuts.gbr  Parkbrake_switch-F.Cu.gbr  Parkbrake_switch-F.Mask.gbr  Parkbrake_switch-F.SilkS.gbr  Parkbrake_switch-NPTH-drl_map.ps  Parkbrake_switch-NPTH.drl  Parkbrake_switch-drl_map.ps  Parkbrake_switch.drl
electronics/gerber/: airsuspension_controller-B.Cu.gbl  airsuspension_controller-B.Mask.gbs  airsuspension_controller-B.SilkS.gbo  airsuspension_controller-Edge.Cuts.gm1  airsuspension_controller-F.Mask.gts  airsuspension_controller.drl
electronics/kicad_lib.pretty/: Inductor_MSS1260.kicad_mod  Molex_48way_36638.kicad_mod  SOIC14_W.kicad_mod  bts6133d.kicad_mod  teensy3.1_w_bottompins.kicad_mod  teensy3.1_w_underside&bottompins.kicad_mod  teensy3.1_w_underside.kicad_mod
firmware/: .gitignore
firmware/bootloader/: generate_bin.py
firmware/bootloader/bootloader-host/: .gitignore  CMakeLists.txt  buffer.c  buffer.h  canbridge.c  canbridge.h  cantypes.h  commands.c  commands.h  main.c  slcan.c  slcan.h  socketcan.c  socketcan.h  types.h  unix_common.c  unix_common.h  win_common.c  win_common.h  win_getopt.c  win_getopt.h
firmware/bootloader/node/: Makefile  can.c  can.h  can_stm32f373.c  can_teensy3.c  can_teensy3.cpp  commands.c  commands.h  fifo.c  fifo.h  main.c  main_opencm3.c  main_teensy3.c  main_teensy3.cpp  mk20dx256.ld  open_cm3.mk  rules.mk  stm32f373xRB.ld  system.d  system.h  system_stm32f373.c  system_teensy3.c  system_teensy3.cpp  teensy31.mk
firmware/display_NODE/canserial/canserial/: CMakeLists.txt  QtCreatorDeployment.txt  main.c
firmware/display_NODE/displayNODE/: caninfo.cpp  caninfo.h  caninterface.cpp  caninterface.h  cannodes.cpp  cannodes.h  canparkbrakenode.cpp  canparkbrakenode.h  canpids.cpp  canpids.h  cansuspensionnode.cpp  cansuspensionnode.h  displayNODE.pro  displayNODE.pro.user.2b5aed2  install-on-pi.bash  keyboardevents.cpp  keyboardevents.h  main.cpp  settings.cpp  settings.h  translation.cpp  translation.h  ts_sv.qm  ts_sv.ts
firmware/parkbrake_ECU/: Makefile  STM32F373xB.ld  button_logic.c  button_logic.h  can.c  can.h  can_protocol.h  canserial.c  canserial.h  chconf.h  control.c  control.h  debug.h  diag.c  diag.h  eeprom_setup.c  eeprom_setup.h  halconf.h  halconf_community.h  main.c  mcuconf.h  park_settings.h  pwm.c  pwm.h  readme.txt  sensors.c  sensors.h  tmr_capture.c  tmr_capture.h
firmware/suspension_ECU/: .gitignore  AirFeed.cpp  AirFeed.h  Height.cpp  Height.h  IOController.cpp  IOController.h  Makefile  mk20dx256.ld  pinouts.h  spec.d  suspension_ECU.ino  suspension_config.h
firmware/system_common/: can_types.c  can_types.h
firmware/system_headers/: can_protocol.h  can_types.h
libraries/: .gitignore
libraries/system_things/: CAN.cpp  CAN.h  CanSerial.cpp  CanSerial.h  DTC.cpp  DTC.h  Inputs.cpp  Inputs.h  List.h  Measure.cpp  Measure.h  Ntc.cpp  Ntc.h  Outputs.cpp  Outputs.h  PID.cpp  PID.h  PidLoop.cpp  PidLoop.h  adresses.h  errors.h  storage.cpp  storage.h  suspension_adresses.h  system_things.h
(+50 files in other folders)
